# latourometer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: run_baselines.sh  score_text.py
src/latourometer/: __init__.py  base.py  cli.py  runtime.py  score.py  stats.py
src/latourometer/baselines/: _corpus_loader.py  calibrate.py  compare.py  schema.py  wordfish.py
src/latourometer/config/: latourometre-seeds.yml  latourometre-stance-hypotheses.yml
src/latourometer/metrics/: latour_stance.py  latourometre.py  thematic_radar.py
tests/: golden_score.json  test_baselines.py  test_calibrate.py  test_compare.py  test_decoupling.py  test_score.py  test_seed_selection.py  test_stats.py  test_text_ci.py  test_wordfish.py
tests/fixtures/corpus/corpus_latourometre/: global_01.md  global_02.md  global_03.md  hors_sol_01.md  hors_sol_02.md  hors_sol_03.md  inversion_01.md  local_01.md  local_02.md  local_03.md  terrestre_01.md  terrestre_02.md  terrestre_03.md
tests/fixtures/corpus/corpus_latourometre/tests/: holdout_hors_sol.md  holdout_terrestre.md
