[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latourometer"
version = "0.1.0"
description = "Score a French political text on Bruno Latour's two attractor axes (Local↔Global, Hors-Sol↔Terrestre) — cosine SemAxis projection + zero-shot NLI stance blend."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Sylvain Artois" }]
keywords = ["latour", "political-science", "text-scaling", "semaxis", "nli", "french-nlp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

# Core runtime: the standalone score(text) entrypoint. The FR spaCy model
# (fr_core_news_lg) is NOT a pip dependency — install it once with
#   python -m spacy download fr_core_news_lg
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6",
    "spacy>=3.7,<4",
    "sentence-transformers>=2.6",
    "transformers>=4.39",
    "torch>=2.1",
    # typer>=0.26 dropped click; spaCy builds break without it (known footgun).
    "click>=8,<9",
    # Both CamemBERT checkpoints ship only sentencepiece.bpe.model (no
    # tokenizer.json); transformers needs these two to build the fast tokenizer.
    "sentencepiece>=0.2",
    "protobuf>=5",
]

[project.optional-dependencies]
# The Wordscores lexical baseline + the reproducible benchmark.
# Pure-CPU (no embedder, no NLI), so they need only spaCy + a few light deps.
baselines = [
    "pyarrow>=15",
    "pydantic>=2.6,<3",
    "python-frontmatter>=1",
]
dev = ["pytest>=8", "ruff>=0.15"]

[project.scripts]
latourometer = "latourometer.cli:main"

[project.urls]
Homepage = "https://github.com/sartois/latourometer"
Dataset = "https://huggingface.co/datasets/DyePop/latourometer-corpus"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sorting. Line length (E501) is owned by
# the formatter, not the linter, so a long docstring/URL never fails the lint.
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
latourometer = ["config/*.yml"]
